Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NoFinal.out
NoFinal.java:11:24: compiler.err.enum.no.finalize
1 error
